@@ -18,14 +18,14 @@ $EM_CONF[$_EXTKEY] = array(
     'author_company' => 'jambage.com',
     'CGLcompliance' => '',
     'CGLcompliance_note' => '',
-    'version' => '3.0.3',
+    'version' => '3.0.4',
     'constraints' => array(
         'depends' => array(
             'php' => '5.5.0-7.3.99',
             'typo3' => '7.6.0-9.5.99',
         ),
         'suggests' => array(
-            'indexed_search' => '7.6.0-8.7.99',
+            'indexed_search' => '7.6.0-9.5.99',
         ),
     ),
 );
